--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,7 @@
         if (response.authResponse) {
           console.log('Welcome! Fetching your information.... ');
           FB.api('/me', { fields: 'name, email' }, function (response) {
-            document.getElementById("profile").innerHTML = "Good to see you, " + response.name + ". i see your email address is "
-              + response.email
+            alert(response.name, response.email)
           });
         } else {
           // < !--If you are not logged in, the login dialog will open for you to login asking for permission to get your public profile and email-- >
